--- a/AllPractice/src/app/product-update/product-update.component.html
+++ b/AllPractice/src/app/product-update/product-update.component.html
@@ -20,8 +20,8 @@
     <tr>
       <td>Hãng</td>
       <td>
-        <select formControlName="category">
-          <option *ngFor="let cate of categorys" [ngValue]="cate.id">{{cate.name}}</option>
+        <select formControlName="category" [compareWith]="compareFn">
+          <option *ngFor="let cate of categorys" [ngValue]="cate">{{cate.name}}</option>
         </select>
       </td>
     </tr>
