--- a/angular-hackernews-app/src/app/navbar/navbar.component.html
+++ b/angular-hackernews-app/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
 </ul>
 <div class="tab-content" id="pills-tabContent">
   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
-    <app-article></app-article>
+<!--    <app-article></app-article>-->
   </div>
   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
   </div>
