--- a/furama/src/app/update-customer/update-customer.component.html
+++ b/furama/src/app/update-customer/update-customer.component.html
@@ -1,78 +1,96 @@
 <div class="content">
-  <form >
-    <fieldset>
-      <legend>New Customer</legend>
-      <table width=70%>
-        <tr>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label">Name</label>
-              <input  type="text" class="form-control"  placeholder="Enter your name">
-            </div>
-          </td>
-          <td>
-            <div class="mb-3">
-              <label class="form-label">Customer Type</label>
-              <select class="form-select" >
-                <option ></option>
-              </select>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label" >Date Of Birth</label>
-              <input  type="date" class="form-control" >
-            </div>
-          </td>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label" >Gender</label>
-              <select class="form-select"  >
-                <option value='Nam' >Nam</option>
-                <option value='Nữ' >Nữ</option>
-              </select>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label">Id Card</label>
-              <input  type="text" class="form-control" placeholder="Enteryour id card" >
-            </div>
-          </td>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label">Phone Number</label>
-              <input  type="text" class="form-control" placeholder="Enter your phone number" >
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label">Email</label>
-              <input  type="text" class="form-control" placeholder="Enter your email" >
-            </div>
-          </td>
-          <td>
-            <div class="mb-3 ">
-              <label class="form-label">Address</label>
-              <input  type="text" class="form-control" placeholder="Enter your address" >
-            </div>
-          </td>
-        </tr>
-        <tr >
-          <td></td>
-          <td >
-            <button type="submit" class="btn btn-primary"
-                    aria-disabled="true" style="float: right" >Add</button>
-            <input type="button" class="btn btn-primary" style="float: right;margin-right: 10px;" onclick="history.back()" value="Back"/>
-          </td>
-        </tr>
-      </table>
-    </fieldset>
+  <form [formGroup]="editForm" (ngSubmit)="submit(editForm)">
+    <b>Update Customer</b>
+    <table width=70%>
+      <tr>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Id</label>
+            <input type="text" class="form-control" formControlName="id" [attr.disabled]="true">
+          </div>
+        </td>
+        <td>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Name</label>
+              <span *ngIf="editForm.controls.name.hasError('required')&&editForm.controls.name.touched">(cannot be left blank)</span>
+            <input type="text" class="form-control" formControlName="name" placeholder="Enter your name">
+          </div>
+        </td>
+        <td>
+          <div class="mb-3">
+            <label class="form-label">Customer Type</label>
+            <span *ngIf="editForm.controls.type.hasError('required')&&editForm.controls.type.touched">(cannot be left blank)</span>
+            <select class="form-select" formControlName="type">
+              <option *ngFor="let type of types" [value]="type" [text]="type"></option>
+            </select>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Date Of Birth</label>
+            <span *ngIf="editForm.controls.dateOfBirth.hasError('required')&&editForm.controls.dateOfBirth.touched">(cannot be left blank)</span>
+            <input type="date" class="form-control" formControlName="dateOfBirth">
+          </div>
+        </td>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Gender</label>
+            <span *ngIf="editForm.controls.gender.hasError('required')&&editForm.controls.gender.touched">(cannot be left blank)</span>
+            <select class="form-select" formControlName="gender">
+              <option value='Nam'>Nam</option>
+              <option value='Nữ'>Nữ</option>
+            </select>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Id Card</label>
+            <span *ngIf="editForm.controls.idCard.hasError('required')&&editForm.controls.idCard.touched">(cannot be left blank)</span>
+            <input type="text" class="form-control" placeholder="Enteryour id card" formControlName="idCard">
+          </div>
+        </td>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Phone Number</label>
+            <span *ngIf="editForm.controls.phone.hasError('required')&&editForm.controls.phone.touched">(cannot be left blank)</span>
+            <input type="text" class="form-control" placeholder="Enter your phone number" formControlName="phone">
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Email</label>
+            <span *ngIf="editForm.controls.email.hasError('required')&&editForm.controls.email.touched">(cannot be left blank)</span>
+            <input type="text" class="form-control" placeholder="Enter your email" formControlName="email">
+          </div>
+        </td>
+        <td>
+          <div class="mb-3 ">
+            <label class="form-label">Address</label>
+              <span *ngIf="editForm.controls.address.hasError('required')&&editForm.controls.address.touched">(cannot be left blank)</span>
+            <input type="text" class="form-control" placeholder="Enter your address" formControlName="address">
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <button type="submit" class="btn btn-primary"
+                  aria-disabled="true" style="float: right">Add
+          </button>
+          <input type="button" class="btn btn-primary" style="float: right;margin-right: 10px;" onclick="history.back()"
+                 value="Back"/>
+        </td>
+      </tr>
+    </table>
   </form>
 </div>
