--- a/QuanLySinhVien/FE/src/app/list/list.component.html
+++ b/QuanLySinhVien/FE/src/app/list/list.component.html
@@ -155,7 +155,7 @@
     </div>
   </div>
 </div>
-<!-- Modal  edit-->
+<!-- Modal  delete-->
 <div class="modal fade" id="delete" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
